Moved Nick Williams from contributors to developers, changed email address.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1481349 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -73,19 +73,13 @@
       -->
       </properties>
     </developer>
-  </developers>
-  <contributors>
-    <contributor>
+    <developer>
+      <id>nickwilliams</id>
       <name>Nick Williams</name>
-      <email>nicholas@nicholaswilliams.net</email>
-      <roles>
-        <role>JSP Tag Library</role>
-      </roles>
+      <email>nickwilliams@apache.org</email>
       <timezone>America/Chicago</timezone>
-      <properties>
-      </properties>
-    </contributor>
-  </contributors>
+    </developer>
+  </developers>
   <mailingLists>
     <mailingList>
       <name>log4j-user</name>
