Updating JPAAppender to use JPA 2.1 instead, test with Hibernate 4.3
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1481664 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -298,12 +298,12 @@
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
-        <version>4.1.9.Final</version>
+        <version>4.3.0.Beta2</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate.javax.persistence</groupId>
-        <artifactId>hibernate-jpa-2.0-api</artifactId>
-        <version>1.0.1.Final</version>
+        <artifactId>hibernate-jpa-2.1-api</artifactId>
+        <version>1.0.0.Draft-16</version>
       </dependency>
       <dependency>
         <groupId>org.mongodb</groupId>
