--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,9 @@
       <name>Ralph Goers</name>
       <email>rgoers@apache.org</email>
       <organization>Intuit Financial Services</organization>
+      <roles>
+        <role>PMC Member</role>
+      </roles>
       <timezone>America/Los_Angeles</timezone>
     </developer>
     <developer>
@@ -51,12 +54,18 @@
       <name>Gary Gregory</name>
       <email>ggregory@apache.org</email>
       <organization>Rocket Software</organization>
+      <roles>
+        <role>PMC Member</role>
+      </roles>
       <timezone>America/New_York</timezone>
     </developer>
     <developer>
       <id>sdeboy</id>
       <name>Scott Deboy</name>
       <email>sdeboy@apache.org</email>
+      <roles>
+        <role>PMC Member</role>
+      </roles>
       <timezone>America/Los_Angeles</timezone>
     </developer>
     <developer>
@@ -64,19 +73,20 @@
       <name>Remko Popma</name>
       <email>rpopma@apache.org</email>
       <roles>
-        <role>Async Low-Latency Loggers, log4j JMX support</role>
+        <role>Committer</role>
       </roles>
       <timezone>Asia/Tokyo</timezone>
       <properties>
-      <!--
-        <picUrl>http://people.apache.org/~rpopma/img/profilepic.jpg</picUrl>
-      -->
+        <!--<picUrl>http://people.apache.org/~rpopma/img/profilepic.jpg</picUrl>-->
       </properties>
     </developer>
     <developer>
       <id>nickwilliams</id>
       <name>Nick Williams</name>
       <email>nickwilliams@apache.org</email>
+      <roles>
+        <role>Committer</role>
+      </roles>
       <timezone>America/Chicago</timezone>
     </developer>
   </developers>
