--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,11 @@
         <version>2.2.9</version>
       </dependency>
       <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.3.171</version>
+      </dependency>
+      <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
         <version>4.3.0.Beta2</version>
