Upgrading from Jackson Mapper 1.9.11 to Jackson Data Processor 2.2.1.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1483407 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -48,13 +48,13 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-core-asl</artifactId>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-mapper-asl</artifactId>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
