--- a/samples/flume-embedded/pom.xml
+++ b/samples/flume-embedded/pom.xml
@@ -14,7 +14,6 @@
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -23,9 +22,9 @@
     <groupId>org.apache.logging.log4j.samples</groupId>
     <version>2.0-beta7-SNAPSHOT</version>
   </parent>
-  <artifactId>flume-embedded</artifactId>
-  <name>flume-embedded</name>
+  <artifactId>log4j-samples-flume-embedded</artifactId>
   <packaging>war</packaging>
+  <name>Apache Log4j Samples: Flume - Embedded</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,7 +32,7 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.logging.log4j.samples</groupId>
-      <artifactId>flume-common</artifactId>
+      <artifactId>log4j-samples-flume-common</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
