- Using Log4j instead of Log4J Part 1: Log4j is used hundreds of times, but Log4J (capital J) is used about 100 times. Replacing all Log4J with Log4j for consistency. - Replacing all Log4j2 with Log4j 2 for consistency. - Fixing numerous spelling errors in documentation.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1483567 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,8 +25,8 @@
   </parent>
   <artifactId>log4j-core</artifactId>
   <packaging>jar</packaging>
-  <name>Apache Log4J Core</name>
-  <description>Apache Log4J Implementation.</description>
+  <name>Apache Log4j Core</name>
+  <description>The Log4j Implementation</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Core Documentation</docLabel>
