--- a/slf4j-impl/pom.xml
+++ b/slf4j-impl/pom.xml
@@ -26,7 +26,7 @@
   <artifactId>log4j-slf4j-impl</artifactId>
   <packaging>jar</packaging>
   <name>Apache Log4j SLF4J Binding</name>
-  <description>Binding between SLF4J API and Log4J2 Core</description>
+  <description>Binding between SLF4J API and Log4j 2 Core</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>SLF4J Documentation</docLabel>
