LOG4J2-10 - Create osgi specific jars
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1484378 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -751,6 +751,7 @@
   <modules>
     <module>api</module>
     <module>core</module>
+    <module>osgi</module>
     <module>log4j12-api</module>
     <module>slf4j-impl</module>
     <module>log4j-to-slf4j</module>
