Refactor Cobertura plugin version into a property in the main POM.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1487151 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
     <surefire.plugin.version>2.14.1</surefire.plugin.version>
     <rat.plugin.version>0.8</rat.plugin.version>
     <pdf.plugin.version>1.2</pdf.plugin.version>
+    <cobertura.plugin.version>2.2</cobertura.plugin.version>
     <manifestfile>target/osgi/MANIFEST.MF</manifestfile>
     <maven.compile.source>1.6</maven.compile.source>
     <maven.compile.target>1.6</maven.compile.target>
