--- a/taglib/pom.xml
+++ b/taglib/pom.xml
@@ -189,7 +189,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.2</version>
+        <version>${cobertura.plugin.version}</version>
         <reportSets>
           <reportSet>
             <!-- Disabled as it kills the site generation via a NoClassDefFoundError -->
