--- a/pom.xml
+++ b/pom.xml
@@ -134,8 +134,8 @@
     <slf4j.version>1.7.5</slf4j.version>
     <logback.version>1.0.13</logback.version>
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.0-beta6</Log4jReleaseVersion>
-    <Log4jReleaseCount>eighth</Log4jReleaseCount>
+    <Log4jReleaseVersion>2.0-beta7</Log4jReleaseVersion>
+    <Log4jReleaseCount>ninth</Log4jReleaseCount>
     <jackson.version>2.2.1</jackson.version>
     <flumeVersion>1.3.1</flumeVersion>
     <disruptor.version>3.0.1</disruptor.version>
