Fix Javadoc plugin warnings.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1493457 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -279,6 +279,9 @@
          project -->
           <detectOfflineLinks>false</detectOfflineLinks>
           <linksource>true</linksource>
+          <links>
+            <link>http://docs.oracle.com/javaee/6/api/</link> 
+          </links>
           <tags>
             <tag>
               <name>issue</name>
