--- a/pom.xml
+++ b/pom.xml
@@ -134,8 +134,8 @@
     <slf4j.version>1.7.5</slf4j.version>
     <logback.version>1.0.13</logback.version>
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.0-beta7</Log4jReleaseVersion>
-    <Log4jReleaseCount>ninth</Log4jReleaseCount>
+    <Log4jReleaseVersion>2.0-beta8</Log4jReleaseVersion>
+    <Log4jReleaseCount>tenth</Log4jReleaseCount>
     <jackson.version>2.2.1</jackson.version>
     <flumeVersion>1.3.1</flumeVersion>
     <disruptor.version>3.0.1</disruptor.version>
@@ -479,6 +479,24 @@
           </configuration>
         </plugin>
         <plugin>
+          <groupId>org.adoptopenjdk.maven.plugins</groupId>
+          <artifactId>javadoc-updater-maven-plugin</artifactId>
+          <version>0.1-SNAPSHOT</version>
+          <executions>
+            <execution>
+              <phase>site</phase>
+              <goals>
+                <goal>fixjavadoc</goal>
+              </goals>
+              <configuration>
+                <!-- by default check target/site if apidocs are not here change the value
+                <directory>${project.reporting.outputDirectory}</directory>
+                -->
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
           <version>${pmd.plugin.version}</version>
@@ -555,6 +573,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire.plugin.version}</version>
         <configuration>
+          <systemPropertyVariables>
+            <java.awt.headless>true</java.awt.headless>
+          </systemPropertyVariables>
           <forkMode>always</forkMode>
         </configuration>
       </plugin>
