- Updated the JPA 2.1 artifact to the final version - Switched from using incomplete JPA 2.1 implementation (Hibernate) to the complete, reference implementation (EclipseLink) - Now that the JPAAppender is finally testable, fixed lots of NPEs and other problems
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1500366 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -105,8 +105,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>org.eclipse.persistence.jpa</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -135,8 +135,8 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.1-api</artifactId>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>javax.persistence</artifactId>
       <scope>compile</scope>
       <optional>true</optional>
     </dependency>
