[LOG4J2-270], [LOG4J2-293] Removing the separate log4j-web artifact/submodule and integrating it into core. Adding support for web-fragment/auto-initialization in Servlet 3.0 and newer.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1500398 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -135,6 +135,12 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.eclipse.persistence</groupId>
       <artifactId>javax.persistence</artifactId>
       <scope>compile</scope>
