--- a/samples/flume-common/pom.xml
+++ b/samples/flume-common/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>log4j-samples</artifactId>
     <groupId>org.apache.logging.log4j.samples</groupId>
-    <version>2.0-beta8-SNAPSHOT</version>
+    <version>2.0-beta8</version>
   </parent>
   <artifactId>log4j-samples-flume-common</artifactId>
   <packaging>jar</packaging>
