--- a/pom.xml
+++ b/pom.xml
@@ -565,8 +565,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <!-- Do not upgrade to versions 3.1, 3.2 or 3.3. 3.2 & 3.3 cause a NullPointerException in site:stage-deploy
-        and the site is broken in all of them -->
-        <version>3.0</version>
+        and the site is broken in all of them. See http://jira.codehaus.org/browse/MSITE-695 -->
+        <version>3.3</version>
         <dependencies>
           <dependency>
             <groupId>org.apache.maven.wagon</groupId>
