LoG4J2-351 changed Fragment-Host in generated manifest files from org.apache.commons.log4j-api to org.apache.logging.log4j-api
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1513877 13f79535-47bb-0310-9956-ffa450edef68

--- a/osgi/core-osgi-async/pom.xml
+++ b/osgi/core-osgi-async/pom.xml
@@ -85,7 +85,7 @@
             <Import-Package>${osgi.import}</Import-Package>
             <DynamicImport-Package>${osgi.dynamicImport}</DynamicImport-Package>
             <Bundle-DocURL>${project.url}</Bundle-DocURL>
-            <Fragment-Host>org.apache.commons.log4j-api;bundle-version=${project.version.osgi}</Fragment-Host>
+            <Fragment-Host>org.apache.logging.log4j-api;bundle-version=${project.version.osgi}</Fragment-Host>
           </instructions>
         </configuration>
         <executions>
