--- a/core/pom.xml
+++ b/core/pom.xml
@@ -158,6 +158,12 @@
       <scope>compile</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>3.2.4.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -286,7 +292,7 @@
           <detectOfflineLinks>false</detectOfflineLinks>
           <linksource>true</linksource>
           <links>
-            <link>http://docs.oracle.com/javaee/6/api/</link> 
+            <link>http://docs.oracle.com/javaee/6/api/</link>
           </links>
           <tags>
             <tag>
