--- a/pom.xml
+++ b/pom.xml
@@ -765,17 +765,17 @@
     </site>
   </distributionManagement>
   <modules>
-    <module>api</module>
-    <module>core</module>
-    <module>osgi</module>
-    <module>log4j12-api</module>
-    <module>slf4j-impl</module>
+    <module>log4j-api</module>
+    <module>log4j-core</module>
+    <module>log4j-osgi</module>
+    <module>log4j-1.2-api</module>
+    <module>log4j-slf4j-impl</module>
     <module>log4j-to-slf4j</module>
-    <module>jcl-bridge</module>
-    <module>flume-ng</module>
-    <module>taglib</module>
-    <module>jmx-gui</module>
-    <module>samples</module>
+    <module>log4j-jcl</module>
+    <module>log4j-flume-ng</module>
+    <module>log4j-taglib</module>
+    <module>log4j-jmx-gui</module>
+    <module>log4j-samples</module>
   </modules>
   <profiles>
     <profile>
