LOG4J2-368 - Add PatternLayout constructor to Log4j 1.2 bridge for Velocity
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1517659 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-1.2-api/pom.xml
+++ b/log4j-1.2-api/pom.xml
@@ -52,6 +52,12 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+      <version>1.7</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
