Fixes for "mvn eclipse:eclipse".
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1518044 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-samples/flume-embedded/pom.xml
+++ b/log4j-samples/flume-embedded/pom.xml
@@ -88,10 +88,10 @@
   <build>
     <resources>
       <resource>
-        <directory>${basedir}/src/main/resources</directory>
+        <directory>../../src/main/resources</directory>
       </resource>
       <resource>
-        <directory>${basedir}/src/main/webapp/WEB-INF</directory>
+        <directory>../../src/main/webapp/WEB-INF</directory>
         <includes>
           <include>web.xml</include>
         </includes>
