[LOG4J2-388] Update Java Mail dependency to 1.5.0 from 1.4.7.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1520056 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -375,9 +375,9 @@
         <optional>true</optional>
       </dependency>
       <dependency>
-        <groupId>javax.mail</groupId>
-        <artifactId>mail</artifactId>
-        <version>1.4.7</version>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.5.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
