--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -130,8 +130,8 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>javax.mail</groupId>
-      <artifactId>mail</artifactId>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
