distribution directory was renamed
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1523246 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -902,7 +902,7 @@
         </plugins>
       </build>
       <modules>
-        <module>dist</module>
+        <module>log4j-distribution</module>
       </modules>
     </profile>
     <profile>
