Cannot serialize LocalizedMessage: org.apache.commons.lang3.SerializationException: java.io.EOFException
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1563302 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -60,6 +60,12 @@
       <artifactId>maven-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.2.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
