fixed Remkos role
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1565817 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
       <name>Remko Popma</name>
       <email>rpopma@apache.org</email>
       <roles>
-        <role>Committer</role>
+        <role>PMC Member</role>
       </roles>
       <timezone>Asia/Tokyo</timezone>
       <properties>
