fix for renamed osgi submodules
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1565940 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-osgi/pom.xml
+++ b/log4j-osgi/pom.xml
@@ -44,8 +44,8 @@
     <module>core-osgi-jpa</module>
     <module>core-osgi-legacy-api</module>
     <module>core-osgi-net</module>
-    <module>core-osgi-nosql-couch</module>
-    <module>core-osgi-nosql-mongo</module>
+    <module>core-osgi-nosql-couchdb</module>
+    <module>core-osgi-nosql-mongodb</module>
     <module>core-osgi-reduced</module>
   </modules>
 </project>
