Preparing to release rc1
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1566045 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
     <slf4j.version>1.7.5</slf4j.version>
     <logback.version>1.0.13</logback.version>
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.0-beta9</Log4jReleaseVersion>
+    <Log4jReleaseVersion>2.0-rc1</Log4jReleaseVersion>
     <Log4jReleaseCount>eleventh</Log4jReleaseCount>
     <jackson1.version>1.9.13</jackson1.version>
     <jackson2.version>2.2.2</jackson2.version>
