LOG4J2-410 - SLf4JLogger is now Serializable.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1572998 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-slf4j-impl/pom.xml
+++ b/log4j-slf4j-impl/pom.xml
@@ -99,6 +99,7 @@
               <excludes>
                 <exclude>**/LoggerTest.java</exclude>
                 <exclude>**/MarkerTest.java</exclude>
+                <exclude>**/SerializeTest.java</exclude>
               </excludes>
               <includes>
                 <include>**/OptionalTest.java</include>
