Added myself to developer list.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1573748 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,16 @@
       </roles>
       <timezone>America/Chicago</timezone>
     </developer>
+    <developer>
+      <id>mattsicker</id>
+      <name>Matt Sicker</name>
+      <email>mattsicker@apache.org</email>
+      <organization>Peapod</organization>
+      <roles>
+        <role>Committer</role>
+      </roles>
+      <timezone>America/Chicago</timezone>
+    </developer>
   </developers>
   <mailingLists>
     <mailingList>
