Update my employer information
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1573822 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
       <id>rgoers</id>
       <name>Ralph Goers</name>
       <email>rgoers@apache.org</email>
-      <organization>Intuit Financial Services</organization>
+      <organization>Maas Global Solutions Corp</organization>
       <roles>
         <role>PMC Member</role>
       </roles>
