LOG4J2-558 Create a log4j-bom
  - Added log4j-bom Maven module.
  - Added Maven usage information to manual.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1574757 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -886,6 +886,7 @@
     <module>log4j-taglib</module>
     <module>log4j-jmx-gui</module>
     <module>log4j-samples</module>
+    <module>log4j-bom</module>
   </modules>
   <profiles>
     <profile>
