Fix deprecated warning from bom.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1575607 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -12,7 +12,7 @@
   <name>Apache Log4j 2 BOM</name>
   <description>Apache Log4j 2 Bill of Material</description>
   <artifactId>log4j-bom</artifactId>
-  <version>${parent.version}</version>
+  <version>${project.parent.version}</version>
   <packaging>pom</packaging>
   <dependencyManagement>
     <dependencies>
