Moved default YJP location in pom profile.
  - Apparently, spaces in the file name aren't such a good idea 
  according to YourKit.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1580562 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -1029,7 +1029,7 @@
       <id>yourkit</id>
 
       <properties>
-        <yourkit.home>/Applications/YourKit Java Profiler.app</yourkit.home>
+        <yourkit.home>/Applications/YJP.app</yourkit.home>
       </properties>
       <dependencies>
         <dependency>
