added Bruce Brouwer, changed Nick's role to PMC member
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1582108 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
       <name>Nick Williams</name>
       <email>nickwilliams@apache.org</email>
       <roles>
-        <role>Committer</role>
+        <role>PMC Member</role>
       </roles>
       <timezone>America/Chicago</timezone>
     </developer>
@@ -98,6 +98,15 @@
         <role>Committer</role>
       </roles>
       <timezone>America/Chicago</timezone>
+    </developer>
+    <developer>
+      <id></id>
+      <name>Bruce Brouwer</name>
+      <email>bruce.brouwer@gmail.com</email>
+      <roles>
+        <role>Contributor</role>
+      </roles>
+      <timezone>America/Detroit</timezone>
     </developer>
   </developers>
   <mailingLists>
