Update log4j-core pom comments.
  - Clarified use of mockejb and jmdns

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1583178 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -124,7 +124,7 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
-    <!-- Advertiser tests -->
+    <!-- Zeroconf advertiser tests -->
     <dependency>
       <groupId>javax.jmdns</groupId>
       <artifactId>jmdns</artifactId>
@@ -178,7 +178,7 @@
       <artifactId>org.eclipse.persistence.jpa</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- JNDI tests -->
+    <!-- JNDI and JMS tests -->
     <dependency>
       <groupId>org.mockejb</groupId>
       <artifactId>mockejb</artifactId>
