--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -76,9 +76,9 @@
     </dependency>
     <!-- Used for JMS appenders (needs an implementation of course) -->
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jms_1.1_spec</artifactId>
-      <optional>true</optional>
+      <groupId>org.jboss.spec.javax.jms</groupId>
+      <artifactId>jboss-jms-api_1.1_spec</artifactId>
+      <scope>provided</scope>
     </dependency>
     <!-- Required for SMTPAppender -->
     <dependency>
