Allows the CLI to skip some tests, for example: mvn test -Dlog4j.skip.test1=**/ConfigurationTest.java -Dlog4j.skip.test2=**/FileOutputTest.java
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1583524 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,7 @@
     <Log4jReleaseVersion>2.0-rc1</Log4jReleaseVersion>
     <Log4jReleaseCount>eleventh</Log4jReleaseCount>
     <jackson1.version>1.9.13</jackson1.version>
-    <jackson2.version>2.2.2</jackson2.version>
+    <jackson2.version>2.3.2</jackson2.version>
     <spring.version>3.2.8.RELEASE</spring.version>
     <flumeVersion>1.4.0</flumeVersion>
     <disruptor.version>3.2.0</disruptor.version>
@@ -680,6 +680,10 @@
             <java.awt.headless>true</java.awt.headless>
           </systemPropertyVariables>
           <forkMode>always</forkMode>
+          <excludes>
+            <exclude>${log4j.skip.test1}</exclude>
+            <exclude>${log4j.skip.test2}</exclude>
+          </excludes>
         </configuration>
       </plugin>
       <plugin>
