Update yourkit profile.
  - Added activation on Mac and if it exists.
  - TODO: anyone using Windows or Linux along with YJP should create 
  separate profiles for that. The old one only worked on Mac anyway.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1585221 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -1069,8 +1069,15 @@
     </profile>
     <profile>
       <!-- http://www.yourkit.com/docs/80/help/agent.jsp -->
-      <id>yourkit</id>
-
+      <id>yourkit-mac</id>
+      <activation>
+        <os>
+          <family>Mac</family>
+        </os>
+        <file>
+          <exists>${yourkit.home}/bin/mac/libyjpagent.jnilib</exists>
+        </file>
+      </activation>
       <properties>
         <yourkit.home>/Applications/YJP.app</yourkit.home>
       </properties>
