Add relative path to parent.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1585232 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-plugin-processor/pom.xml
+++ b/log4j-plugin-processor/pom.xml
@@ -23,6 +23,7 @@
     <artifactId>log4j</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
     <version>2.0-rc2-SNAPSHOT</version>
+    <relativePath>../</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
