Add log4j-streams module.
  - See LOG4J2-547
  - Thanks to Bruce Brouwer for the patch!
  - Added finals everywhere to said patch.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1587396 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -930,6 +930,7 @@
     <module>log4j-samples</module>
     <module>log4j-bom</module>
     <module>log4j-plugin-processor</module>
+    <module>log4j-streams</module>
   </modules>
   <profiles>
     <profile>
